refactor : 포장하지 못했던 원시값 포장 진행